<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".AddCategoryActivity">


    <TextView
        android:id="@+id/add_category_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="#AA48F8B4"
        android:gravity="center"
        android:text="@string/add_category"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="28sp"
        tools:ignore="NewApi" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_type"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/category_type_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/income_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/income_tab_name"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/outcome_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/outcome_tab_name"
                        android:textSize="16sp" />
                </RadioGroup>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/category_name_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="20">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category_name"
                    android:imeOptions="actionDone"
                    android:inputType="textAutoComplete"
                    android:maxLength="20"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/add_category_money_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_category_money_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/category_money"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:maxLength="20"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/category_pic_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_pic"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/category_pic_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:prompt="@string/category_pic"
                    android:spinnerMode="dialog">

                </Spinner>

            </LinearLayout>


            <Button
                android:id="@+id/add_category_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="addCategory"
                android:text="@string/add_category"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>