<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddItemActivity">

    <TextView
        android:id="@+id/title_text_view_add_item_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_item"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/item_name_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="20">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Item_name"
                    android:inputType="textAutoComplete"
                    android:maxLength="20"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/item_price_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_price"
                    android:inputType="numberDecimal"
                    android:maxLength="20"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/item_notes_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="100">
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_notes"
                    android:imeOptions="actionDone"
                    android:inputType="textImeMultiLine"
                    android:maxLength="100" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/outcome_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_out_category"
                    android:textSize="18dp" />

                <Spinner
                    android:id="@+id/outcome_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/item_out_category"
                    android:spinnerMode="dialog"
                    android:textAlignment="center"></Spinner>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/income_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_in_category"
                    android:textSize="18dp" />

                <Spinner
                    android:id="@+id/income_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/item_in_category"
                    android:spinnerMode="dialog"
                    android:textAlignment="center"></Spinner>

            </LinearLayout>

            <Button
                android:id="@+id/add_item_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="addItem"
                android:text="@string/add_item"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>